--- a/index.html
+++ b/index.html
@@ -57,31 +57,31 @@
 <h2>
 <a id="day1" class="anchor" href="#day1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 1</h2>
 <p> Morning</p>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session1-intro.html">Introduction</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session2-R-recap.pdf">Introduction</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session1-intro.html">Course Introduction</a></li>
+<li><atarget="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session2-R-recap.pdf">R Refresher</a></li>
 <p>Afternoon</p>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session3-ngs-intro.html">Intro to NGS</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session3-NGS_QC_inesdesantiago.pdf">QC of NGS data (Lecture)</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session4-fastqcf_sweave/pdf">QC of NGS data (Practical)</a></li>
-<li><a href="https://docs.google.com/forms/d/1h1sXLptX5FUhoVnmwdY7MKEaU-39fcBYpRIsdVpH-LM/viewform?c=0&w=1f">QC of NGS data (Quiz)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session3-ngs-intro.html">Intro to NGS</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session3-NGS_QC_inesdesantiago.pdf">QC of NGS data (Lecture)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session4-fastqcf_sweave/pdf">QC of NGS data (Practical)</a></li>
+<li><a target="_blank" href="https://docs.google.com/forms/d/1h1sXLptX5FUhoVnmwdY7MKEaU-39fcBYpRIsdVpH-LM/viewform?c=0&w=1f">QC of NGS data (Quiz)</a></li>
 <h2>
 <a id="day2" class="anchor" href="#day2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 2</h2>
 <p>Morning</p>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session1-repSeqData.html">Representing NGS data in Bioconductor (Lecture)</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session1-StringsAndRanges-Prac.pdf">Represening NGS data in Bioconductor (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-repSeqData.html">Representing NGS data in Bioconductor (Lecture)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-StringsAndRanges-Prac.pdf">Represening NGS data in Bioconductor (Practical)</a></li>
 <p>Afternoon</p>
 <li>Linear models and statistics for RNA-seq data</li>
 <li>Introduction to RNA-seq</li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session4-rnaSeq_counting.pdf">Mapping and Counting for RNA-seq (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session4-rnaSeq_counting.pdf">Mapping and Counting for RNA-seq (Practical)</a></li>
 <h2>
 <p>Morning</p>
 <a id="day3" class="anchor" href="#day3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 3</h2>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session1-rnaSeq_DE.pdf">Differential Expression for RNA-Seq (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session1-rnaSeq_DE.pdf">Differential Expression for RNA-Seq (Practical)</a></li>
 <p>Afternoon</p>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session2-annoAndViz.html">Annotation of NGS data in Bioconductor (Lecture)</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session2-Annotation-and-Visualisation.pdf">Annotation of NGS data in Bioconductor (Practical)</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session3-further-rna-seq.html">Further RNA-seq analysis (Lecture)</a></li>
-<li><a href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Session3-further-rna-seq-prac.pdf">Further RNA-seq analysis (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session2-annoAndViz.html">Annotation of NGS data in Bioconductor (Lecture)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session2-Annotation-and-Visualisation.pdf">Annotation of NGS data in Bioconductor (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq.html">Further RNA-seq analysis (Lecture)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq-prac.pdf">Further RNA-seq analysis (Practical)</a></li>
 <a id="day4" class="anchor" href="#day4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 4</h2>
 
       <footer class="site-footer">
