--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <p>Afternoon</p>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session3-ngs-intro.html">Intro to NGS</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session3-NGS_QC_inesdesantiago.pdf">QC of NGS data (Lecture)</a></li>
-<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session4-fastqcf_sweave/pdf">QC of NGS data (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/session4-fastqc_sweave/pdf">QC of NGS data (Practical)</a></li>
 <li><a target="_blank" href="https://docs.google.com/forms/d/1h1sXLptX5FUhoVnmwdY7MKEaU-39fcBYpRIsdVpH-LM/viewform?c=0&w=1f">QC of NGS data (Quiz)</a></li>
 <h2>
 <a id="day2" class="anchor" href="#day2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 2</h2>
 <p>Morning</p>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-repSeqData.html">Representing NGS data in Bioconductor (Lecture)</a></li>
-<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-StringsAndRanges-Prac.pdf">Represening NGS data in Bioconductor (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-StringsAndRanges-Prac.pdf">Representing NGS data in Bioconductor (Practical)</a></li>
 <p>Afternoon</p>
 <li>Linear models and statistics for RNA-seq data</li>
 <li>Introduction to RNA-seq</li>
@@ -83,6 +83,12 @@
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq.html">Further RNA-seq analysis (Lecture)</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq-prac.pdf">Further RNA-seq analysis (Practical)</a></li>
 <a id="day4" class="anchor" href="#day4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 4</h2>
+
+<h1>
+<a id="Acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h1>
+<p>
+  The materials from this course are based on NGS analysis courses in Cambridge and the MRC Clinical Sciences Centre. Mark would like to thanks Oscar Rueda, Bernard Pereira (<a href="http://www.cruk.cam.ac.uk/research-groups/caldas-group">Caldas group, CRUK Cambridge</a>), <a href="http://www.markowetzlab.org/ines/">Ines de Santiago</a> and <a href="http://www.mrc-cu.cam.ac.uk/research/Shamith-Samarajiwa-folder/">Shamith Samarajiwa</a>  for making their materials available.
+</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bioinformatics-core-shared-training/ndarc16">NDARC16:- NGS Data Analysis, RNAseq, ChIPseq</a> is maintained by <a href="https://github.com/bioinformatics-core-shared-training">bioinformatics-core-shared-training</a>.</span>
