--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session2-Annotation-and-Visualisation.pdf">Annotation of NGS data in Bioconductor (Practical)</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq.html">Further RNA-seq analysis (Lecture)</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq-prac.pdf">Further RNA-seq analysis (Practical)</a></li>
+<h2>
 <a id="day4" class="anchor" href="#day4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 4</h2>
 
 <h1>
 <a id="Acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h1>
 <p>
-  The materials from this course are based on NGS analysis courses in Cambridge and the MRC Clinical Sciences Centre. Mark would like to thanks Oscar Rueda, Bernard Pereira (<a href="http://www.cruk.cam.ac.uk/research-groups/caldas-group">Caldas group, CRUK Cambridge</a>), <a href="http://www.markowetzlab.org/ines/">Ines de Santiago</a> and <a href="http://www.mrc-cu.cam.ac.uk/research/Shamith-Samarajiwa-folder/">Shamith Samarajiwa</a>  for making their materials available.
+  The materials from this course are based on NGS analysis courses in Cambridge and the MRC Clinical Sciences Centre. Mark would like to thanks Oscar Rueda, Bernard Pereira (<a target="_blank" href="http://www.cruk.cam.ac.uk/research-groups/caldas-group">Caldas group, CRUK Cambridge</a>), <a target="_blank" href="http://www.markowetzlab.org/ines/">Ines de Santiago</a> and <a target="_blank" href="http://www.mrc-cu.cam.ac.uk/research/Shamith-Samarajiwa-folder/">Shamith Samarajiwa</a>  for making their materials available.
 </p>
 
       <footer class="site-footer">
