--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">NDARC16:- NGS Data Analysis, RNAseq, ChIPseq</h1>
+      <h1 class="project-name">NDARC16:- NGS Data Analysis, RNAseq, ChIPseq; #ndarc16</h1>
+      
       <h2 class="project-tagline">4-day ngs workshop at Instituto Gulbenkian de Ciência</h2>
       <a href="https://github.com/bioinformatics-core-shared-training/ndarc16" class="btn">View on GitHub</a>
       <a href="https://github.com/bioinformatics-core-shared-training/ndarc16/zipball/master" class="btn">Download .zip</a>
