--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <p>Afternoon</p>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/Session3-ngs-intro.html">Intro to NGS</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/Session3-NGS_QC_inesdesantiago.pdf">QC of NGS data (Lecture)</a></li>
-<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/Session4-fastqc_sweave/pdf">QC of NGS data (Practical)</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day1/Session4-fastqc_sweave.pdf">QC of NGS data (Practical)</a></li>
 <li><a target="_blank" href="https://docs.google.com/forms/d/1h1sXLptX5FUhoVnmwdY7MKEaU-39fcBYpRIsdVpH-LM/viewform?c=0&w=1f">QC of NGS data (Quiz)</a></li>
 <h2>
 <a id="day2" class="anchor" href="#day2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 2</h2>
