--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-repSeqData.html">Representing NGS data in Bioconductor (Lecture)</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session1-StringsAndRanges-Prac.pdf">Representing NGS data in Bioconductor (Practical)</a></li>
 <p>Afternoon</p>
-<li>Linear models and statistics for RNA-seq data</li>
-<li>Introduction to RNA-seq</li>
+
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/LM_Mar2016.pdf">Statistical Models for Sequencing Data</a></li>
+<li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/RNAseq_Mar2016.pdf">Introduction to RNA-seq</a></li>
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day2/Session4-rnaSeq_align.pdf">Mapping and Counting for RNA-seq (Practical)</a></li>
 <h2>
 <p>Morning</p>
