--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 <li><a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Day3/Session3-further-rna-seq-prac.pdf">Further RNA-seq analysis (Practical)</a></li>
 <h2>
 <a id="day4" class="anchor" href="#day4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 4</h2>
+<li><a target="_blank" href="http://bioinformatics-core-shared-training.github.io/ChIPseq_1Day/">See separate page</a></li>
 
 <h1>
 <a id="Acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h1>
