--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 <li><a target="_blank" href="http://bioinformatics-core-shared-training.github.io/ChIPseq_1Day/">See separate page</a></li>
 
 <h1>
+  <a id="Docker" class="anchor" href="#docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docker</h1>
+<li>You can replicate the environment for the course using this <a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Dockerfile">Docker file</a>/li>
+<h1>
 <a id="Acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h1>
 <p>
   The materials from this course are based on NGS analysis courses in Cambridge and the MRC Clinical Sciences Centre. Mark would like to thanks Oscar Rueda, Bernard Pereira (<a target="_blank" href="http://www.cruk.cam.ac.uk/research-groups/caldas-group">Caldas group, CRUK Cambridge</a>), <a target="_blank" href="http://www.markowetzlab.org/ines/">Ines de Santiago</a> and <a target="_blank" href="http://www.mrc-cu.cam.ac.uk/research/Shamith-Samarajiwa-folder/">Shamith Samarajiwa</a>  for making their materials available.
