--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
 <h1>
   <a id="Docker" class="anchor" href="#docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docker</h1>
-<li>You can replicate the environment for the course using this <a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Dockerfile">Docker file</a>/li>
+<li>You can replicate the environment for the course using this <a target="_blank" href="https://rawgit.com/bioinformatics-core-shared-training/ndarc16/master/Dockerfile">Docker file</a></li>
+<li><a target="_blank" href="www.docker.com">docker.com</a></li>
 <h1>
 <a id="Acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgements</h1>
 <p>
