--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </section>
 
     <section class="main-content">
+            <img align="center" src="DSC00143.jpg"/>
       <h1>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h1>
 
