--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <h1>
 <a id="materials" class="anchor" href="#materials" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Materials</h1>
-
+All material is available to download under GPL v3 license.
 <h2>
 <a id="day1" class="anchor" href="#day1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Day 1</h2>
 <p> Morning</p>
