--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <section class="page-header">
       <h1 class="project-name">NDARC16:- NGS Data Analysis, RNAseq, ChIPseq; #ndarc16</h1>
       
-      <h2 class="project-tagline">4-day ngs workshop at Instituto Gulbenkian de Ciência</h2>
+      <h2 class="project-tagline">4-day ngs workshop at Instituto Gulbenkian de Ciência. In collaboration with <a href="http://gtpb.igc.gulbenkian.pt/bicourses/index.html">The Gulbenkian Training Programme in Bioinformatics</a></h2>
+      
       <a href="https://github.com/bioinformatics-core-shared-training/ndarc16" class="btn">View on GitHub</a>
       <a href="https://github.com/bioinformatics-core-shared-training/ndarc16/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/bioinformatics-core-shared-training/ndarc16/tarball/master" class="btn">Download .tar.gz</a>
